--- a/index.html
+++ b/index.html
@@ -5,10 +5,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title> Login - Smashing magazine </title>
+    <link href="style.css" rel="stylesheet">
+    <link href="utils.css" rel="stylesheet">
+
 </head>
 
-<body>
+<body class="flex">
+    <nav class="nav flex align-center">
+        <a href="https://www.smashingmagazine.com/" target="_blank" rel="noopener noreferrer"> <img width="30"
+                src="https://cdn.schema.io/smashing-magazine/62267a6a93cebd01324e4509/aa48d1a46ce4ca09c1962d9e939e678c"
+                alt="logo">
+        </a>
+        <a href="https://www.smashingmagazine.com/articles/" target="_blank" rel="noopener noreferrer">
+            Articles </a>
+        <a href="https://www.smashingmagazine.com/printed-books/"> Books </a>
+        <a href="https://www.smashingmagazine.com/online-workshops/" target="_blank" rel="noopener noreferrer">
+            Workshops </a>
+        <a href="https://www.smashingmagazine.com/events/" target="_blank" rel="noopener noreferrer">
+            Conferences </a>
+        <a href="https://www.smashingmagazine.com/membership/" target="_blank" rel="noopener noreferrer">
+            Membership </a>
+        <form class="flex align-center">
+            <input placeholder=" Search articles..." type="text" name="search">
+            <svg class="search-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                <!--! Font Awesome Pro 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
+                <path
+                    d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352c79.5 0 144-64.5 144-144s-64.5-144-144-144S64 128.5 64 208s64.5 144 144 144z" />
+            </svg>
+        </form>
+    </nav>
+
 
 </body>
 
